--- a/LeaveManagementSystem/Views/Leave/LeaveDetail.cshtml
+++ b/LeaveManagementSystem/Views/Leave/LeaveDetail.cshtml
@@ -2,48 +2,61 @@
 <link rel="stylesheet" href="~/Content/CustomStyleSheet.css">
 
 <br />
-<a href="~/Leave/verifyleave" class="btn btn-primary" style="float:right;">Back</a>
+<a href="~/Leave/verifyleave" class="btn btn-primary" style="float:left;">Back</a>
 <form action="" method="post">
     <div class="container">
         <h3>Leave Request</h3>
 
         <hr>
-        <label for="Name"><b>Name</b></label>
-        <input type="text" id="Name" value="@Model.RequesterName" readonly>
-        <label for="Designation"><b>Designation</b></label>
-        <input type="text" id="Designation" value="@Model.RequesterDesignation" readonly>
-        <label for="fromdate"><b>From Date</b></label>
-        <input type="text" value="@Model.FromDate.ToShortDateString()" id="fromdate" readonly>
-
-        <label for="todate"><b>To Date</b></label>
-        <input type="text" value="@Model.ToDate.ToShortDateString()" id="todate" readonly>
-        <label for="fromdate"><b>No of Days</b></label>
-        <input type="text" name="FromDate" id="fromdate" readonly>
-       
-        <br>
-        <label><b>Vacation Type</b></label>
-        <input type="text" value="@Model.VacationName" readonly>
 
 
-        <br /><br />
+
+        @Html.LabelFor(temp => temp.RequesterName, "Name")
+        @Html.TextBoxFor(temp => temp.RequesterName, new { @Value = Model.Creater.FirstName + Model.Creater.MiddleName + Model.Creater.LastName, @readonly = true, @class = "form-control" })
+
+        @Html.LabelFor(temp => temp.RequesterDesignation, "Designation")
+        @Html.TextBoxFor(temp => temp.RequesterDesignation, new { @Value = Model.Creater.Designation.DesignationName, @readonly = true, @class = "form-control" })
+
+
+        @Html.LabelFor(temp => temp.NoOfDays, "No of Days")
+        @Html.TextBoxFor(temp => temp.NoOfDays, new { @value = Model.NoOfDays, @class = "form-control", @readonly = true })
 
 
 
 
-        <label for="comment"><b>Reason</b></label>
-<input type="text" id="comment" style="float:right;"  value="@Model.Comments" readonly>
+        @Html.LabelFor(temp => temp.FromDate, "From Date")
+        @Html.TextBoxFor(model => model.FromDate,
+               new { @type = "date", @Value = Model.FromDate.ToString("yyyy-MM-dd"), @class = "form-control", @readonly = true })
+        <br />
 
- 
-        <br><br><br><br><br>
-        <label for="comment"><b>Reply</b></label>
-<textarea style="float:right;" id="comment" name="Response"  rows="4" cols="50">
+        @Html.LabelFor(temp => temp.ToDate, "To Date")
+        @Html.TextBoxFor(model => model.ToDate,
+              new { @type = "date", @Value = Model.ToDate.ToString("yyyy-MM-dd"), @class = "form-control", @readonly = true })
+        <br />
 
-  </textarea>
 
-    @Html.HiddenFor(temp => temp.RequestID)
-        @Html.HiddenFor(temp=>temp.CreatedBy)
+        @Html.LabelFor(temp => temp.VacationName, "Vacation Type")
+        @Html.TextBoxFor(temp => temp.VacationName, new { @value = Model.VacationType.VacationName, @class = "form-control", @readonly = true })
+
+
+
+
+
+
+
+        @Html.LabelFor(temp => temp.Comments)
+        @Html.TextAreaFor(temp => temp.Comments, new { @value = Model.Comments, @class = "form-control", @readonly = "true" })
+
+        <br />
+        @Html.LabelFor(temp => temp.Response)
+        @Html.TextAreaFor(temp => temp.Response, new { @class = "form-control" })
+
+
+
+        @Html.HiddenFor(temp => temp.RequestID)
+        @Html.HiddenFor(temp => temp.CreatorID)
     </div>
-    <br><br><br><br><br>
+   
     <button type="submit" class="btn btn-success" name="LeaveStatus" value="Accept">Accept</button>
     <button type="submit" style="float:right;" class="btn btn-danger" name="LeaveStatus" value="Reject">Decline</button>
 
